--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CYBERFICTION - SP</title>
+    <link rel="Icon" href="https://spgaming2056.w3spaces.com/favicon_io/favicon.ico">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
 </head>
-<body>
+<body  oncontextmenu="return false" >
     <a id="nav" style="cursor: pointer;color: #000;text-decoration: none;" href="https://portfolio-zsfc.onrender.com/">
         <h3><b>CYBER</b>FICTION*<b>SIDD</b></h3>
         <button>Sep,2024</button></a>
